Ajout de propriétés à l'entité covoiturage et au document avis
